--- a/build.gradle
+++ b/build.gradle
@@ -58,50 +58,50 @@ sourceSets {
 
 dependencies {
       compile 'kxml2:kxml2:2.3.0'
-      compile group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.0.1'
-      compile files('lib/regexp-me.jar')
+      implementation group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.0.1'
+      implementation files('lib/regexp-me.jar')
       // Added so Android Studio recognizes libs in util jar projects
-      compile 'org.json:json:20140107'
-      compile 'commons-cli:commons-cli:1.3.1'
-      compile 'xpp3:xpp3:1.1.4c'
-      compile 'joda-time:joda-time:2.9.3'
-      compile 'com.carrotsearch:hppc:0.7.2'
+      implementation 'org.json:json:20140107'
+      implementation 'commons-cli:commons-cli:1.3.1'
+      implementation 'xpp3:xpp3:1.1.4c'
+      implementation 'joda-time:joda-time:2.9.3'
+      implementation 'com.carrotsearch:hppc:0.7.2'
       compile "com.squareup.retrofit2:retrofit:2.3.0"
-      compile 'com.squareup.okhttp3:logging-interceptor:3.8.0'
+      implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
       compile group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.2'
       compile 'io.reactivex.rxjava2:rxjava:2.1.1'
 
 
-      cliCompile 'org.json:json:20140107'
-      cliCompile files('lib/regexp-me.jar')
+      cliImplementation 'org.json:json:20140107'
+      cliImplementation files('lib/regexp-me.jar')
       cliCompile 'kxml2:kxml2:2.3.0'
-      cliCompile 'commons-cli:commons-cli:1.3.1'
-      cliCompile 'xpp3:xpp3:1.1.4c'
-      cliCompile 'joda-time:joda-time:2.9.3'
+      cliImplementation 'commons-cli:commons-cli:1.3.1'
+      cliImplementation 'xpp3:xpp3:1.1.4c'
+      cliImplementation 'joda-time:joda-time:2.9.3'
       cliCompile 'io.reactivex.rxjava2:rxjava:2.1.1'
 
-      testCompile sourceSets.main.output
-      testCompile sourceSets.api.output
-      testCompile sourceSets.cli.output
-      testCompile 'junit:junit:4.12'
-      testCompile 'org.json:json:20140107'
-      testCompile 'org.xerial:sqlite-jdbc:3.8.11.1'
-      testCompile 'joda-time:joda-time:2.9.3'
+      testImplementation sourceSets.main.output
+      testImplementation sourceSets.api.output
+      testImplementation sourceSets.cli.output
+      testImplementation 'junit:junit:4.12'
+      testImplementation 'org.json:json:20140107'
+      testImplementation 'org.xerial:sqlite-jdbc:3.8.11.1'
+      testImplementation 'joda-time:joda-time:2.9.3'
 
-      apiCompile sourceSets.main.output
-      apiCompile 'org.json:json:20140107'
-      apiCompile 'org.xerial:sqlite-jdbc:3.8.11.1'
+      apiImplementation sourceSets.main.output
+      apiImplementation 'org.json:json:20140107'
+      apiImplementation 'org.xerial:sqlite-jdbc:3.8.11.1'
       apiCompile 'kxml2:kxml2:2.3.0'
-      apiCompile 'joda-time:joda-time:2.9.3'
+      apiImplementation 'joda-time:joda-time:2.9.3'
       apiCompile 'io.reactivex.rxjava2:rxjava:2.1.1'
 
       translateCompile 'kxml2:kxml2:2.3.0'
-      translateCompile 'xpp3:xpp3:1.1.4c'
-      translateCompile 'commons-cli:commons-cli:1.3.1'
-      translateCompile files('lib/regexp-me.jar')
-      translateCompile files('lib/json-simple-1.1.1.jar')
-      translateCompile 'joda-time:joda-time:2.9.3'
-      translateCompile 'org.json:json:20140107'
+      translateImplementation 'xpp3:xpp3:1.1.4c'
+      translateImplementation 'commons-cli:commons-cli:1.3.1'
+      translateImplementation files('lib/regexp-me.jar')
+      translateImplementation files('lib/json-simple-1.1.1.jar')
+      translateImplementation 'joda-time:joda-time:2.9.3'
+      translateImplementation 'org.json:json:20140107'
       translateCompile 'io.reactivex.rxjava2:rxjava:2.1.1'
 
     // 'compile' dependency is also needed to run 'gradle jmh' for some reason,
